# autodiff

./: .clang-format  .gitignore  CMakeLists.txt
include/autodiff/: autodiff.hpp  ebo.hpp  et.hpp  var.hpp  vector.hpp
include/autodiff/et/: binop.hpp  core.hpp
include/vessel/: tuple.hpp
test/: ebo_tuple.cpp  simple_test.cpp
